# libsvm-practice

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.xml
examples/datasets/: README.md
examples/datasets/1/: B9407F30-F5F8-466E-AFF9-25556B57FE6D-0-0-filter.csv  B9407F30-F5F8-466E-AFF9-25556B57FE6D-0-1-filter.csv  training_set
examples/datasets/new/test_data/: 2014-05-09T13_02_48.871Z-2014-05-09T14_02_48.876Z.raw  2014-05-09T13_02_48.871Z-2014-05-09T14_02_48.876Z.raw_filter  2014-05-09T14_22_22.843Z-2014-05-09T15_22_22.885Z.raw  2014-05-09T14_22_22.843Z-2014-05-09T15_22_22.885Z.raw_filter
examples/datasets/new/training_data/: 2014-05-09T12_02_48.718Z-2014-05-09T13_02_48.758Z.raw  2014-05-09T12_02_48.718Z-2014-05-09T13_02_48.758Z.raw_filter  training_data
examples/datasets/old/: B9407F30-F5F8-466E-AFF9-25556B57FE6D-0-2-filter.csv
scripts/: writelibsvmdataformat.py
scripts/ant/: vc11.xml
scripts/python/: libsvm_predict.py  libsvm_train.py  plot_signal.py  signal_filter.py  write_libsvm_data_format_v2.py  writelibsvmdataformat.py
source/: CMakeLists.txt  LibSvm.cpp  LibSvm.h  SignalDistanceLModel.cpp  SignalDistanceLModel.h  SignalDistanceLibSvm.cpp  SignalDistanceLibSvm.h  SignalDistancePredictor.cpp  SignalDistancePredictor.h  SignalDistancePublic.cpp  SignalDistancePublic.h
